Bugfix : add name in opened item after creation

--- a/WebContent/forms/createItem.html
+++ b/WebContent/forms/createItem.html
@@ -122,7 +122,7 @@
 							}
 						} else {
 							sendMessage("success","Item successfully created");
-							openItem({id:data.objects[0].id});
+							openItem({id:data.objects[0].id, name : data.objects[0].name});
 						}
 					}
 				}).fail(function(jxqr,textStatus,error){
