--- a/WebContent/forms/createItem.html
+++ b/WebContent/forms/createItem.html
@@ -1,42 +1,46 @@
 <html>
 <body>
-	<span style="display: none" data-provider="currentItem" onchange="_createItem.refreshItem(global.currentItem)"/>
+	<span style="display: none" data-provider="currentItem"
+		onchange="_createItem.refreshItem(global.currentItem)" />
 	<form>
-		<fieldset class="form-group">
-			<legend>Item fields</legend>
-			<div class="form-group row">
-				<label class="col-sm-2 col-form-label col-form-label-sm" for="createItemName">Name*</label>
-				<div class="col-10">
-					<input class="form-control form-control-sm" type="text" id="createItemName" onchange="_createItem.onNameChange()"/>
+		<div class="bd-callout-info bd-callout">
+			<fieldset class="form-group">
+				<legend>Item fields</legend>
+				<div class="form-group row">
+					<label class="col-sm-2 col-form-label col-form-label-sm" for="createItemName">Name*</label>
+					<div class="col-10">
+						<input class="form-control form-control-sm" type="text" id="createItemName"
+							onchange="_createItem.onNameChange()" />
+					</div>
 				</div>
-			</div>
-			<div class="form-group row">
-				<label class="col-sm-2 col-form-label col-form-label-sm" for="createItemCategory">Category*</label>
-				<div class="col-10">
-					<select class="form-control form-control-sm" type="text" id="createItemCategory" onchange="_createItem.onCategoryChange()"/>
+				<div class="form-group row">
+					<label class="col-sm-2 col-form-label col-form-label-sm" for="createItemCategory">Category*</label>
+					<div class="col-10">
+						<select class="form-control form-control-sm" type="text" id="createItemCategory"
+							onchange="_createItem.onCategoryChange()" />
+					</div>
 				</div>
-			</div>
-			<div class="form-group row">
-				<label class="col-sm-2 col-form-label col-form-label-sm" for="createItemClass">Class*</label>
-				<div class="col-10">
-					<select class="form-control form-control-sm" type="text" id="createItemClass" onchange="_createItem.applyClass()"/>
+				<div class="form-group row">
+					<label class="col-sm-2 col-form-label col-form-label-sm" for="createItemClass">Class*</label>
+					<div class="col-10">
+						<select class="form-control form-control-sm" type="text" id="createItemClass"
+							onchange="_createItem.applyClass()" />
+					</div>
 				</div>
-			</div>
-			<div id="createItemAdditionalProperties">
-			</div>
-		</fieldset>
-		<hr/>
-		<button class="btn btn-danger btn-sm" type="button"
-			onclick='_createItem.cancel();' id="createItemCancelButton">
+				<div id="createItemAdditionalProperties"></div>
+			</fieldset>
+		</div>
+		<button class="btn btn-danger btn-sm" type="button" onclick='_createItem.cancel();'
+			id="createItemCancelButton">
 			<img src='images/14.png' /> cancel
 		</button>
-		<button class="btn btn-primary btn-sm" type="button"
-			onclick='_createItem.validate();' id="createItemValidateButton" disabled="true">
+		<button class="btn btn-primary btn-sm" type="button" onclick='_createItem.validate();'
+			id="createItemValidateButton" disabled="true">
 			<img src='images/92.png' /> create
 		</button>
-		&nbsp;&nbsp;&nbsp;&nbsp;
-		<input class="form-check-input" type="checkbox" id="createItemAddToCurrentItem"/>
-		<label class="form-check-label" for="createItemAddToCurrentItem">Add to currentItem</label>
+		&nbsp;&nbsp;&nbsp;&nbsp; <input class="form-check-input" type="checkbox"
+			id="createItemAddToCurrentItem" /> <label class="form-check-label"
+			for="createItemAddToCurrentItem">Add to currentItem</label>
 	</form>
 	<script type="text/javascript">
 		var _createItem = {
