Refactoring : move currentItem into new global variable 'global.item'

--- a/WebContent/forms/searchItem.html
+++ b/WebContent/forms/searchItem.html
@@ -120,13 +120,14 @@ function onImportItemFormSearchClick(){
 				}
 			}
 			var row = new Array();
-			row.push("<a href='#' onClick='event.preventDefault();openItem({id:\""+element.id+"\", name : \""+element.name+"\"});$(\"#popup\").panel().close()'>"+element.name+"</a>");
+			row.push("<a href='#' onClick='event.preventDefault();global.item.open({id:\""+element.id+"\", name : \""+element.name+"\"});$(\"#popup\").panel().close()'>"+element.name+"</a>");
 			row.push(element.class.name);
 			row.push(element.category.name);
 			var label = "";
-			if (global.currentItem != null){
-				if (global.currentItem.id != element.id){
-					label = "<button class='btn btn-primary btn-sm' onClick='event.preventDefault();linkItem({id:\""+global.currentItem.id+"\"},{id:\""+element.id+"\"});'>Link</button>";
+			var currentItem = global.item.getCurrent();
+			if (currentItem != null){
+				if (currentItem.id != element.id){
+					label = "<button class='btn btn-primary btn-sm' onClick='event.preventDefault();global.item.link({id:\""+currentItem.id+"\"},{id:\""+element.id+"\"});'>Link</button>";
 				}
 			}
 			row.push(label);
