Add of not yet implemented document functions

--- a/WebContent/forms/viewItem.html
+++ b/WebContent/forms/viewItem.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 	<form>
-		<span style="display: none" data-provider="currentItem" onchange="_viewItem.refreshItem(global.item.getCurrent();)"></span>
+		<span style="display: none" data-provider="currentItem" onchange="_viewItem.refreshItem(global.item.getCurrent())"></span>
 		<ul class="nav nav-pills mb-3" id="myTab" role="tablist">
 			<li class="nav-item"><a class="nav-link active" id="detail-tab" data-toggle="tab"
 				href="#detail" role="tab" aria-controls="detail" aria-selected="true">Detail</a></li>
